--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header nav a:hover {
 
 .medium-img {
     width: 260px;
-    height: 150px;
+    height: 300px;
     background: #ddd;
     border-radius: 8px;
 }
@@ -72,4 +72,10 @@ header nav a:hover {
     align-items: center;
     margin: 30px auto;
     cursor: pointer;
+}
+
+button{
+    background-color: red;
+    border-color: red;
+    color: red;
 }
